kube-prometheus/yc-ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-demo2
  annotations:
    ingress.alb.yc.io/group-name: 'alb-demo123'
    ingress.alb.yc.io/subnets: 'e9bblabblipe7e8k1998'
    ingress.alb.yc.io/external-ipv4-address: 'auto'
    #ingress.alb.yc.io/internal-ipv4-address: auto,
    #ingress.alb.yc.io/internal-alb-subnet: 'e9bblabblipe7e8k1998'

spec:
  rules:
    - host: "grafana.develug.ru"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
               service:
                  name: grafana
                  port:
                     name: http
